added link to github repo

--- a/crossgram/appconf.ini
+++ b/crossgram/appconf.ini
@@ -1,6 +1,7 @@
 [clld]
 menuitems_list = contributions parameters languages contributors sentences sources
 app_template = crossgram.mako
+github_repos = clld/crossgram
 pacific_centered_maps = false
 sitemaps = language parameter source
 
