--- a/crossgram/appconf.ini
+++ b/crossgram/appconf.ini
@@ -2,7 +2,7 @@
 menuitems_list = contributions parameters languages contributors sentences sources
 app_template = crossgram.mako
 github_repos = clld/crossgram
-pacific_centered_maps = false
+pacific_centered_maps = true
 sitemaps = language parameter source
 
 [mako]
