--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 ignore = E711,E712,D100,D101,D103,D102,D301
 max-line-length = 100
-exclude = .tox
+exclude = ENV,build,.tox
 
 [tool:pytest]
 minversion = 3.1
