--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-ignore = E711,E712,D100,D101,D103,D102,D301
+ignore = E501,E711,E712,E741,D100,D101,D103,D102,D301,W503
 max-line-length = 100
 exclude = ENV,build,.tox
 
